finally matched homelessness section on index

--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -1,12 +1,39 @@
 <div class="readable-div">
     <div class="readable-text">
-    <h1 id="homelessness_and_financials">Homelessness, lack of Food, Asylum and Refugees & financial needs</h1>
+        <h1 id="homelessness_and_financials">
+            Homelessness, lack of Food, Asylum and Refugees & financial needs
+        </h1>
 
-        <h2 id="worldwide_housing_refugees_and_asylum">
-            Worldwide Help for safe housing (
+        <h2 id="refugees_and_asylum">
+            Help for 
             <span class="highlighted">refugees and asylum seekers</span>
-            )
         </h2>
+
+        <p>
+            What is Asylum vs Refugees? <br>
+            <a href="https://www.unhcr.org/us/asylum-seekers">
+                unhcr.org/us/asylum-seekers
+            </a>
+        </p>
+
+        <h3 id="refugees_and_asylum_to_us">US</h3>
+
+        <ul>
+            <li>
+                Trans Refugees moving to Las Vegas: 
+                <a href="https://www.aplaceformarshaofficial.org">
+                    aplaceformarshaofficial.org
+                </a>
+            </li>
+            <li>
+                Asylum seekers moving to San Francisco: 
+                <a href="https://www.lgbtasylumproject.org">
+                    lgbtasylumproject.org
+                </a>
+            </li>
+        </ul>
+
+        <h3 id="refugees_and_asylum_to_worldwide"> Worldwide </h3>
 
         <ul>
             <li>
@@ -33,57 +60,24 @@
                     oramrefugee.org/seeking-help
                 </a>
             </li>
-        </ul>
-
-        <h3 id="refugees_and_asylum_to_us">Moving to the US</h3>
-
-        <ul>
             <li>
-                Trans Refugees moving to Las Vegas: 
-                <a href="https://www.aplaceformarshaofficial.org">
-                    aplaceformarshaofficial.org
+                Asylum & refugees (based in Austria): 
+                <a href="https://queerbase.at/before-your-flight/">
+                    queerbase.at/before-your-flight/
                 </a>
             </li>
             <li>
-                Asylum seekers moving to San Francisco: 
-                <a href="https://www.lgbtasylumproject.org">
-                    lgbtasylumproject.org
+                Trans Lifeline relocation help: 
+                <a href="https://translifeline.org/resource_category/relocation-assistance/">
+                    translifeline.org/relocation-assistance/
                 </a>
             </li>
         </ul>
 
-        <div class="separator"></div>
+        <h2 id="housing"> Housing </h2>
+        <h3 id="us_housing"> US </h3>
 
         <p>
-            Asylum & refugees (based in Austria): 
-            <a href="https://queerbase.at/before-your-flight/">
-                queerbase.at/before-your-flight/
-            </a>
-        </p>
-
-        <div class="separator"></div>
-
-        <p>
-            What is Asylum vs Refugees? <br>
-            <a href="https://www.unhcr.org/us/asylum-seekers">
-                unhcr.org/us/asylum-seekers
-            </a>
-        </p>
-        <p>
-            Trans Lifeline relocation help: 
-            <a href="https://translifeline.org/resource_category/relocation-assistance/">
-                translifeline.org/relocation-assistance/
-            </a>
-        </p>
-
-        <div class="separator"></div>
-
-        <h2>US</h2>
-
-        <h3 id="us_housing">Housing</h3>
-
-        <p>
-            Nationwide resources:
             <ul>
                 <li>
                     <a href="https://www.211.org/about-us/your-local-211">
@@ -97,7 +91,6 @@
                 </li>
             </ul>
         </p>
-
         <p>
             <ul>
                 <li>
@@ -120,7 +113,6 @@
                 </li>
             </ul>
         </p>
-
         <p>
             <b><span class="highlighted">Need moving funds to get out of Florida/Texas or another state?</span></b>
             <ul>
@@ -148,7 +140,7 @@
                     </a>
                 </li>
                 <li>
-                    <b><span class="highlighted">Youth Runaway Crisis line(call/text)</span></b>: 
+                    <b><span class="highlighted">Youth Runaway Crisis line (call/text)</span></b>: 
                     <a href="https://www.1800runaway.org/youth-teens">
                         1800runaway.org/youth-teens
                     </a>
@@ -156,9 +148,9 @@
             </ul>
         </p>
 
-        <h3 id="us_food">Food</h3>
+        <h2 id="food">Food</h2>
 
-        <h4> US </h4>
+        <h3 id="us_food"> US </h3>
 
         <p>
             <ul>
@@ -176,7 +168,7 @@
         </p>
 
 
-        <h4> Worldwide </h4>
+        <h3 id="wordlwide_food"> Worldwide </h3>
         <p> 
             <ul>
                 <li>
@@ -259,7 +251,7 @@
             .
         </p>
 
-        <h3>Tips and tricks</h3>
+        <h3 id="health_insurance_tips_and_tricks">Tips and tricks</h3>
 
         <p>
             Always ask if your doctor can do a payment plan (small payments over time), <br>
@@ -278,7 +270,7 @@
             You can also add a partner or children under your health insurance plan.
         </p>
 
-        <h3>Grants</h3>
+        <h3 id="health_insurance_grants">Grants</h3>
 
         <p>
             (surgery,healthcare,moving and more)
@@ -365,7 +357,7 @@
             </a>
         </p>
 
-        <h3>Job boards</h3>
+        <h3 id="job_boards">Job boards</h3>
 
         <h4>Worldwide</h4> 
 
@@ -412,7 +404,11 @@
             </li>
         </ol>
 
-        <h3>Know your rights in the workplace!</h3>
+        <h3 id="workplace_rights">Workplace Rights</h3>
+
+        <p>
+            Know your rights in the workplace!
+        </p>
 
         <p>
             US: 
@@ -453,7 +449,7 @@
             <i>*if you are completely unable to work, ask your local government for information about unemployment and disability income options,etc.</i> <br>
         </p>
 
-        <h3>Skill building</h3> 
+        <h3 id="skill_building">Skill building</h3> 
 
         <p>
 
@@ -493,7 +489,7 @@
             This is a free course and goes at your own pace with our instructor. 
         </p>
 
-        <h3>Resume Help</h3> 
+        <h3 id="resume_help">Resume Help</h3> 
 
         <p>
             University of Michigan’s Resume Guide: 
@@ -508,7 +504,7 @@
             </i>
         </p>
 
-        <h3>Job interviews</h3>
+        <h3 id="job_interviews">Job interviews</h3>
 
         <h4>What to say</h4>
         <ul>
@@ -556,7 +552,7 @@
             </li>
         </ul>
 
-        <h3>College financial aid options (US)</h3>
+        <h3 id="college_financial_aid_options_us">College financial aid options (US)</h3>
 
         <p>
             <ul>
