--- a/pages/index.html
+++ b/pages/index.html
@@ -246,15 +246,15 @@
             </li>
             <li>
                 <h3 style="margin: 0px;">
-                    <a href="./homelessness_and_financials.html#worldwide_housing_refugees_and_asylum">
+                    <a href="./homelessness_and_financials.html">
                         Homelessness, lack of Food, Asylum and Refugees & financial needs
                     </a>
                 </h3>
                 <ol type="A"> 
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
-                                Worldwide Help for safe housing ( refugees and asylum seekers )
+                            <a href="./homelessness_and_financials.html#refugees_and_asylum">
+                                Help for refugees and asylum seekers
                             </a>
                         </h4>
                     </li>
@@ -262,32 +262,64 @@
                         <li>
                             <h5 style="margin: 0px;">
                                 <a href="./homelessness_and_financials.html#refugees_and_asylum_to_us">
-                                    Moving to the US
+                                    US
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#refugees_and_asylum_to_worldwide">
+                                    Worldwide
                                 </a>
                             </h5>
                         </li>
                     </ol>
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html#us_housing">
+                            <a href="./homelessness_and_financials.html#housing">
                                 Housing
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#us_housing">
+                                    US
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#lgbt_youth_homelessness">
+                                    Youth-runaway crisis lines
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html#lgbt_youth_homelessness">
-                                Youth-runaway crisis lines
-                            </a>
-                        </h4>
-                    </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./homelessness_and_financials.html#us_food">
+                            <a href="./homelessness_and_financials.html#food">
                                 Food
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#us_food">
+                                    US
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#worldwide_food">
+                                    Worldwide
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#wifi_internet_help">
@@ -298,17 +330,77 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#health_insurances">
-                                How to find low cost health insurance, grants for funding
+                                How to find health insurance
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#health_insurance_tips_and_tricks">
+                                    Tips and tricks
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#health_insurance_grants">
+                                    Grants
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./homelessness_and_financials.html#jobs_resumes_and_skill_building">
-                                Job skills, resumes, interviews, College scholarships and more
+                                Job resumes, resumes and skill building
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#job_boards">
+                                    Job Boards
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#workplace_rights">
+                                    Workplace Rights
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#skill_building">
+                                    Skill building
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#resume_help">
+                                    Resume Help
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#job_interviews">
+                                    Job interviews
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./homelessness_and_financials.html#college_financial_aid_options_us">
+                                    College financial aid options (US)
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
