--- a/pregnancy_and_parenting.html
+++ b/pregnancy_and_parenting.html
@@ -185,6 +185,11 @@
     <body>
 <div class="sidebar">
     <ul>
+        <a href="./index.html">
+            <li>
+                Index
+            </li>
+        </a>
         <a href="./mental_health.html">
             <li>
                 Mental Health
