fixed type in link

--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -432,7 +432,7 @@
         </p>
 
 
-        <h3 id="wordlwide_food"> Worldwide </h3>
+        <h3 id="worldwide_food"> Worldwide </h3>
         <p> 
             <ul>
                 <li>
