--- a/pages/homelessness_and_financials.html
+++ b/pages/homelessness_and_financials.html
@@ -168,7 +168,7 @@
         </p>
 
 
-        <h3 id="wordlwide_food"> Worldwide </h3>
+        <h3 id="worldwide_food"> Worldwide </h3>
         <p> 
             <ul>
                 <li>
