matched headings of docs and therapists

--- a/medically_transitioning.html
+++ b/medically_transitioning.html
@@ -293,13 +293,13 @@
             <li>
                 PP-How to inject hrt: 
                 <a href="https://www.plannedparenthood.org/planned-parenthood-western-pennsylvania/patients/introducing-hormone-therapy/hormone-therapy-self-injection-tutorials">
-                    plannedparenthood.org/hormone-therapy-self-injection-tutorials
+                    plannedparenthood.org/ - hormone therapy self injection tutorials
                 </a>
             </li>
             <li>
                 PDF version of how to inject hrt: 
                 <a href="https://www.plannedparenthood.org/uploads/filer_public/fc/b0/fcb07ab8-4f33-4e1b-8b15-3754c34e3aae/pplm_gender_affirming_hormone_therapy_injection_guide_2.pdf">
-                    plannedparenthood.org/pplm_gender_affirming_hormone_therapy_injection_guide
+                    plannedparenthood.org/ - pplm gender affirming hormone therapy injection guide
                 </a>
             </li>
         </ul>
@@ -311,19 +311,19 @@
                 <li>
                     Step1: 
                     <a href="https://www.youtube.com/watch?v=ApWiQH4rzlA">
-                        youtube.com/watch?v=ApWiQH4rzlA
+                        youtube - Hormone Self-Injection - Step 1: Drawing Up
                     </a><br>
                 </li>
                 <li>
                     Intramuscular injection: 
                     <a href="https://www.youtube.com/watch?v=FgCCO9Gqt1Q">
-                        youtube.com/watch?v=FgCCO9Gqt1Q
+                        youtube - Hormone Self-Injection - Step 2a: Intramuscular Injection
                     </a><br>
                 </li>
                 <li>
                     Subcutaneous Injection: 
                     <a href="https://www.youtube.com/watch?v=DJd02xCNNc0">
-                        youtube.com/watch?v=DJd02xCNNc0
+                        youtube - Hormone Self-Injection - Step 2b: Subcutaneous Injection
                     </a><br>
                 </li>
             </ul>
@@ -346,7 +346,7 @@
             </b> 
         </p>
 
-        <h3 id="hrt_for_trans_masc">HRT for Trans Masc:</h3>
+        <h3 id="hrt_for_trans_masc">HRT for Trans Masc </h3>
 
         <p>
             <i>* testosterone doesn't need an estrogen blocker or another med with it.</i><br>
@@ -379,7 +379,7 @@
 
         </p>
 
-        <h3 id="hrt_for_trans_fem">HRT for Trans Fem:</h3>
+        <h3 id="hrt_for_trans_fem">HRT for Trans Fem </h3>
 
         <p>
             <i>
@@ -413,7 +413,7 @@
             </li>
         </ul>
 
-        <h3 id="hrt_for_nonbinary">Nonbinary options for HRT:</h3>
+        <h3 id="hrt_for_nonbinary">Nonbinary options for HRT </h3>
 
         <p>
             Lower dose of Estrogen or Testosterone for slower results, can stop if needed.
@@ -497,7 +497,7 @@
             </li>
         </ul>
 
-        <h3 id="advice_for_surgery">Advice for surgery consults:</h3>
+        <h3 id="advice_for_surgery">Advice for surgery consults </h3>
         <p>
             Do a lot of research before choosing the surgery and doctor.<br>
             Ask your doctor about:
