--- a/pages/index.html
+++ b/pages/index.html
@@ -457,7 +457,7 @@
                             <li>
                                 <h5 style="margin: 0px;">
                                     <a href="./medically_transitioning.html#affording_surgery">
-                                        affording surgery
+                                        Affording surgery
                                     </a> 
                                 </h5>
                             </li>
@@ -481,10 +481,77 @@
                 <ol type="A">
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./lgbt_friendly_resources.html#friendly_doctors_and_therapists">
-                                Doctors, Therapists, Businesses
+                            <a href="./lgbt_friendly_resources.html#finding_friendly_therapists">
+                                Find an LGBT friendly Therapist
                             </a> 
                         </h4>
+                        <ol type="I">
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#worldwide_therapists">
+                                        Worldwide
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#us_therapists">
+                                        US
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#ger_therapists">
+                                        Germany
+                                    </a> 
+                                </h5>
+                            </li>
+                        </ol>
+                    </li>
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./lgbt_friendly_resources.html#finding_friendly_doctors">
+                                Find an LGBT friendly Doctor
+                            </a> 
+                        </h4>
+                        <ol type="I">
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#worldwide_doctors">
+                                        Worldwide
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#us_doctors">
+                                        US
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#uk_doctors">
+                                        UK
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#canada_doctors">
+                                        Canada
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./lgbt_friendly_resources.html#germany_doctors">
+                                        Germany
+                                    </a> 
+                                </h5>
+                            </li>
+                        </ol>
                     </li>
                 </ol>
             </li>
