matched up to orgs

--- a/general_lgbt_organizations.html
+++ b/general_lgbt_organizations.html
@@ -281,15 +281,22 @@
 
         <p>
             Are you or someone you know living in Florida and need access to “banned books”: <br>
-            <a href="https://firestorm.coop/bannedbooks.html">https://firestorm.coop/bannedbooks.html</a>  <br>
+            <a href="https://firestorm.coop/bannedbooks.html">
+                firestorm.coop/bannedbooks.html
+            </a>  <br>
             This library is sending LGBT books for free to kids in need!
         </p>
         <p>
             Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
-            <a href="https://wearefamilycharleston.org/tgncapplication">wearefamilycharleston.org</a> 
+            <a href="https://wearefamilycharleston.org/tgncapplication">
+                wearefamilycharleston.org
+            </a> 
         </p>
         <p>
-            Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
+            Organizations by state:
+            <a href="https://marshap.org">
+                marshap.org
+            </a> 
         </p>
 
 
@@ -297,15 +304,26 @@
 
         <p>
             <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
-                jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
+                jsis.washington.edu/ - civil society inclusion and diversity in the european union
             </a> 
             (europe, uk, beligum, germany, ireland, etc)
+        </p>
+        
+        <h4 id="lgbt_orgs_by_country_dn">Denmark</h4>
+
+        <p>
+            <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">
+                quku.dk/ - other lgbtqia organizations unions and associations
+            </a><br>
+            (multiple sites listed there)
         </p>
 
         <h4 id="lgbt_orgs_by_country_uk">UK</h4>
         <p>
             Transactual:  <br>
-            <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
+            <a href="https://transactual.org.uk">
+                transactual.org.uk
+            </a> <br>
             (accessible “listening” tool on homepage. For HRT, Name changes, and more)
         </p>
 
@@ -318,23 +336,21 @@
         <h3 id="lgbt_orgs_by_country_nz">New Zealand</h3>
 
         <p>
-            RainbowYouth <a href="https://ry.org.nz">https://ry.org.nz</a> 
+            RainbowYouth 
+            <a href="https://ry.org.nz">
+                ry.org.nz
+            </a> 
         </p>
 
         <h3 id="lgbt_orgs_by_country_au">Australia</h3>
 
         <p>
-            Minus18 LGBT <a href="https://www.minus18.org.au/events">https://www.minus18.org.au/events</a> 
+            Minus18 LGBT 
+            <a href="https://www.minus18.org.au/events">
+                minus18.org.au/events
+            </a> 
         </p>
 
-        <h3 id="lgbt_orgs_by_country_dn">Denmark</h3>
-
-        <p>
-            <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">
-                http://quku.dk/other-lgbtqia-organizations-unions-and-associations/
-            </a><br>
-            (multiple sites listed there)
-        </p>
 
         <div class="separator"></div>
 
@@ -345,73 +361,73 @@
                 <li>
                     (Masc & Fem options) RubyShines
                     <a href="https://rubyshines.com/">
-                        https://rubyshines.com/
+                        rubyshines.com/
                     </a> 
                 </li>
                 <li>
                     (Masc & Fem options) Rebirth Customs
                     <a href="https://rebirthgarments.com/#rebirthgarments">
-                        https://rebirthgarments.com/#rebirthgarments
+                        rebirthgarments.com/
                     </a> 
                 </li>
                 <li>
                     (Masc binders,clothes) ShapeShifters 
-                    <a href="https://shapeshifters.co/product.../garments/sportsbras/">
-                        https://shapeshifters.co/product.../garments/sportsbras/
+                    <a href="https://shapeshifters.co/collections/sportsbras">
+                        shapeshifters.co/sportsbras/
                     </a> 
                 </li>
                 <li>
                     (Swimsuits for trans masc) HumanKind
                     <a href="https://www.humankindclothing.com/">
-                        https://www.humankindclothing.com/
+                        humankindclothing.com/
                     </a> 
                 </li>
                 <li>
                     (swimwear,binders,underwear) Target
                     <a href="https://www.target.com/b/tomboyx/-/N-q643leppdgh">
-                        https://www.target.com/b/tomboyx/-/N-q643leppdgh
+                        target.com//tomboyx/
                     </a> 
                 </li>
                 <li>
                     OutPlay 
                     <a href="https://shopoutplay.com/en-ca">
-                        https://shopoutplay.com/en-ca
+                        shopoutplay.com/en-ca
                     </a> 
                 </li>
                 <li>
                     (swimsuits for masc & fem) Chromat 
                     <a href="https://chromat.co/collections/swimwear">
-                        https://chromat.co/collections/swimwear
+                        chromat.co/collections/swimwear
                     </a> 
                 </li>
                 <li>
                     (swim for all) BeefCake 
                     <a href="https://www.beefcakeswimwear.com/">
-                        https://www.beefcakeswimwear.com/
+                        beefcakeswimwear.com/
                     </a>
                 </li>
                 <li>
                     (masc-swim & binders) Muunne 
                     <a href="https://www.muunne.com/">
-                        https://www.muunne.com/
+                        muunne.com/
                     </a>
                 </li>
                 <li>
                     (trans fem) Tuck Kits- safe for Swim 
                     <a href="https://unclockable.ca/products/flawless-tuck-kit">
-                        https://unclockable.ca/products/flawless-tuck-kit
+                        unclockable.ca/flawless-tuck-kit
                     </a>
                 </li>
                 <li>
                     (trans fem underwear) 
                     <a href="https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149">
-                        https://fit4usolutions.com/products/mtf-underwear-for-transgender?variant=39938989359149
+                        fit4usolutions.com/mtf-underwear-for-transgender
                     </a>
                 </li>
                 <li>
                     (trans fem underwear) 
                     <a href="https://www.tuckituppp.com/product-page/logothick?utm_source=google&utm_medium=wix_google_channel&utm_campaign=freelistings">
-                        https://www.tuckituppp.com/product-page/logothick
+                        tuckituppp.com/logothick
                     </a>
                 </li>
             </ul>
