--- a/pages/legal_help_for_lgbt.html
+++ b/pages/legal_help_for_lgbt.html
@@ -1,6 +1,6 @@
 <div class="readable-div">
     <div class="readable-text">
-        <h1><span class="highlighted">Legal</span> help for LGBT issues</h1>
+        <h1><span class="highlighted">Legal</span> help for LGBT</h1>
         <p>
             (fighting discrimination in healthcare, housing, jobs, marriage, adoption, and many more)<br>
             You can donate, volunteer, find a job with them, or get help locally. <br>
@@ -117,8 +117,7 @@
             </a> 
         </p>
 
-        <h2 id="legal_world">Worldwide Links</h2>
-
+        <h2 id="legal_world">Other countries</h2>
 
         <p>
             LGBT & immigration lawyer:
