--- a/pages/trans_representation.html
+++ b/pages/trans_representation.html
@@ -150,24 +150,8 @@
                 </a>
             </p>
 
-            <h2 id="books_trans_masc">Trans Masc Books</h2>
-
-            <ul>
-                <li>
-                    <a href="https://www.ftmguide.org/books.html">
-                        https://www.ftmguide.org/books.html
-                    </a>
-                </li>
-                <li>
-
-                    <a href="https://www.google.com/shopping/product/7515793074789903731?q=lgbt+books+for+kids+trans&client=opera-gx&hs=poY&sca_esv=d7773eb477db942c&biw=1495&bih=715&dpr=1.25&prds=eto:666606830055741858_0,pid:547419386285660253,rsk:PC_10865885491087945623&sa=X&ved=0ahUKEwj3jZzPhP-FAxXSkIkEHTJBCJQ4PBDzAgj5FQ">
-                        Some Assembly required By: Arin Andrews (book about being ftm)
-                    </a>
-                </li>
-            </ul>
-
-            <h2 id="books_LGBT">Books about LGBT</h2>
-
+            <h2 id="lgbt_books">Books on lgbt</h2>
+            
             <ul>
                 <li>
                     <a href="https://www.amazon.com/Trans-Bodies-Selves-Transgender-Communities/dp/0190092726/ref=d_pd_sbs_vft_none_sccl_2_5/143-3770184-9337616?psc=1">
@@ -201,10 +185,25 @@
                 </li>
             </ul>
 
-            <h2 id="books_lgbt_kids">LGBT Books for kids</h2>
+            <h3 id="books_trans_masc">Trans Masc Books</h3>
 
+            <ul>
+                <li>
+                    <a href="https://www.ftmguide.org/books.html">
+                        ftmguide.org/books.html
+                    </a>
+                </li>
+                <li>
 
-            <h3 id="books_kids_lgbt_education">Lgbt education</h3> 
+                    <a href="https://www.google.com/shopping/product/7515793074789903731?q=lgbt+books+for+kids+trans&client=opera-gx&hs=poY&sca_esv=d7773eb477db942c&biw=1495&bih=715&dpr=1.25&prds=eto:666606830055741858_0,pid:547419386285660253,rsk:PC_10865885491087945623&sa=X&ved=0ahUKEwj3jZzPhP-FAxXSkIkEHTJBCJQ4PBDzAgj5FQ">
+                        Some Assembly required By: Arin Andrews (book about being ftm)
+                    </a>
+                </li>
+            </ul>
+
+            <h3 id="books_lgbt_kids">LGBT Books for kids</h3>
+
+            <h4 id="books_kids_lgbt_education">Lgbt education</h4> 
 
             <ul>
                 <li>
@@ -214,7 +213,7 @@
                 </li>
             </ul>
 
-            <h3 id="books_kids_being">Being an lgbt kid</h3> 
+            <h4 id="books_kids_being">Being an lgbt kid</h4> 
 
             <ul>
                 <li>
@@ -244,7 +243,7 @@
                 </li>
             </ul>
 
-            <h3 id="books_lgbt_families">Lgbt families</h3> 
+            <h4 id="books_lgbt_families">Lgbt families</h4> 
 
             <ul>
                 <li>
