--- a/pages/index.html
+++ b/pages/index.html
@@ -564,6 +564,20 @@
                 <ol type="A">
                     <li>
                         <h4 style="margin: 0px;">
+                            <a href="./trans_representation.html#creators_trans_fem">
+                                Trans fem
+                            </a>
+                        </h4>
+                    </li>
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./trans_representation.html#creators_nonbinary">
+                                Nonbinary
+                            </a>
+                        </h4>
+                    </li>
+                    <li>
+                        <h4 style="margin: 0px;">
                             <a href="./trans_representation.html#creators_trans_masc">
                                 Trans masc
                             </a>
@@ -580,25 +594,27 @@
                     </ol>
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./trans_representation.html#creators_trans_fem">
-                                Trans fem
+                            <a href="./trans_representation.html#lgbt_books">
+                                Books on lgbt
                             </a>
                         </h4>
                     </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./trans_representation.html#creators_nonbinary">
-                                Nonbinary
-                            </a>
-                        </h4>
-                    </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./trans_representation.html#books_lgbt_kids">
-                                Books on lgbt, books for kids
-                            </a>
-                        </h4>
-                    </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_representation.html#books_trans_masc">
+                                    Trans Masc Books
+                                </a>
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_representation.html#books_lgbt_kids">
+                                    LGBT Books for kids
+                                </a>
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
@@ -655,7 +671,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country">
-                                Links to organizations worldwide for events & help
+                                Organisations by Country
                             </a> 
                         </h4>
                         <ol type="I">
@@ -663,6 +679,13 @@
                                 <h5 style="margin: 0px;">
                                     <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_us">
                                         US
+                                    </a> 
+                                </h5>
+                            </li>
+                            <li>
+                                <h5 style="margin: 0px;">
+                                    <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_eu">
+                                        Europe
                                     </a> 
                                 </h5>
                             </li>
@@ -684,13 +707,6 @@
                                 <h5 style="margin: 0px;">
                                     <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_au">
                                         Australia
-                                    </a> 
-                                </h5>
-                            </li>
-                            <li>
-                                <h5 style="margin: 0px;">
-                                    <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_dn">
-                                        Denmark
                                     </a> 
                                 </h5>
                             </li>
