updated index & headings

--- a/general_lgbt_organizations.html
+++ b/general_lgbt_organizations.html
@@ -385,7 +385,7 @@
                 <li>
                     (swimwear,binders,underwear) Target
                     <a href="https://www.target.com/b/tomboyx/-/N-q643leppdgh">
-                        target.com//tomboyx/
+                        target.com/tomboyx/
                     </a> 
                 </li>
                 <li>
