--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -824,7 +824,9 @@
                     In the US we use FAFSA or the government’s financial aid program for helping with college via loans (you pay back). <br>
                     Even if you or your family have jobs and are well off, you still might qualify for some amount of financial aid. <br>
                     Those who have no family help, are homeless,disabled, or were a foster kid might be eligible for more financial aid then others. <br>
-                    FAFSA: <a href="https://studentaid.gov/h/apply-for-aid/fafsa">https://studentaid.gov/h/apply-for-aid/fafsa</a><br>
+                    FAFSA: <a href="https://studentaid.gov/h/apply-for-aid/fafsa">
+                        studentaid.gov/apply-for-aid/fafsa
+                    </a><br>
                 </li>
                 <li>
                     <a href="https://campusprideindex.org">
