--- a/pages/trans_fem_resources.html
+++ b/pages/trans_fem_resources.html
@@ -13,7 +13,9 @@
 
         <h2 id="trans_fem_hair">Hair</h2>
 
-        <h3 id="trans_fem_hair_wigs">Guide to wearing wigs for trans fem</h3> 
+        <h3 id="trans_fem_hair_wigs">
+            Guide to wearing wigs for trans fem
+        </h3> 
 
         <p>
             <a href="https://unclockable.com/blogs/unclockable-blog/wigs-the-perfect-tool-for-transgender-women">
@@ -21,7 +23,9 @@
             </a>
         </p>
 
-        <h3 id="trans_fem_hair_wigs_recommendations">Wig stores that were recommended by other trans women</h3>
+        <h3 id="trans_fem_hair_wigs_recommendations">
+            Wig stores that were recommended by other trans women
+        </h3>
         <ul>
             <li>
                 <a href="https://wilshirewigs.com">
@@ -35,7 +39,9 @@
             </li>
         </ul>
 
-        <h3 id="trans_fem_hair_guide">Fem hair guide</h3>
+        <h3 id="trans_fem_hair_guide">
+            Fem hair guide
+        </h3>
 
         <p>
             <a href="https://unclockable.com/blogs/unclockable-blog/feminizing-hair-tips-for-every-face-type-in-progress">
@@ -43,7 +49,9 @@
             </a>
         </p>
 
-        <h3 id="trans_fem_hair_salon">Finding a safe trans hair salon</h3>
+        <h3 id="trans_fem_hair_salon">
+            Finding a safe trans hair salon
+        </h3>
 
         <ul>
             <li>
@@ -118,7 +126,7 @@
             </li>
         </ul>
 
-        <h2 id="trans_fem_bra">Bra/Chest</h2>
+        <h2 id="trans_fem_bra">Bra / Chest</h2>
         <ul>
             <li>
                 How to measure a bra to fit you: 
@@ -128,7 +136,7 @@
             </li>
         </ul>
 
-        <h2 id="trans_fem_surgery">Fem options for surgery</h2>
+        <h2 id="trans_fem_surgery">Surgery & Grants for funding</h2>
         <p>
             Facial feminization: 
             <a href="https://www.them.us/story/facial-feminization-surgery-recovery-tips">
