--- a/pages/trans_masc_resources.html
+++ b/pages/trans_masc_resources.html
@@ -4,7 +4,7 @@
 
         <h2 id="general_trans_masc_resources">General</h2>
 
-        <h3>Myths about Transitioning Female to Male</h3>
+        <h3 id="ftm_myths">Myths about Transitioning Female to Male</h3>
 
         <p>
             <a href="https://www.ftmguide.org/myths.html">
@@ -12,7 +12,9 @@
             </a>
         </p>
 
-        <h3>Trans masc guide for resources</h3>
+        <h3 id="trans_masc_resource_guide">
+            Trans masc guide for resources
+        </h3>
 
         <p>
             <a href="https://www.transgendermap.com/welcome/for-trans-people/transmasculine/">
@@ -20,7 +22,7 @@
             </a>
         </p>
 
-        <h3>Hair care</h3>
+        <h3 id="trans_masc_hair_care">Hair care</h3>
         <p>
             How to shave your face: 
             <a href=" https://www.ftmguide.org/shaving.html">
@@ -55,7 +57,7 @@
             (US,CANADA, MEXICO, THE UK, NETHERLANDS, CZECHIA, FINLAND)
         </p>
 
-        <h3>Clothes & Shoes guide</h3>
+        <h3 id="trans_masc_clothes">Clothes & Shoes guide</h3>
         <p>
             Finding shoes that fit smaller feet: 
             <a href="https://www.ftmguide.org/shoes.html">
@@ -69,7 +71,7 @@
             Do I need a binder? Binders help relieve chest dysphoria and may flatten a chest slightly to appear more masculine. <br>
         </p>
 
-        <h3>How to find the right size for your binder?</h3>
+        <h3 id="binder_size">How to find the right size for your binder</h3>
         <p>
             Most websites have a size guide for their binders, 
             measured with a sewing measuring tape (flexible) around your ribs, 
@@ -80,7 +82,7 @@
             If you do want it to, I'd recommend buying a new one instead. Otherwise just be careful with the heat & timing of it. <br>
         </p>
 
-        <h3>Where to get a binder?</h3>
+        <h3 id="getting_binders">Where to get a binder</h3>
         <p>
             <ul>
                 <li>
@@ -149,7 +151,7 @@
         </p>
 
 
-        <h3>How to bind safely?</h3>
+        <h3 id="binding_savely">How to bind safely</h3>
         <ul>
             <li>
                 Binding 101: 
@@ -177,7 +179,7 @@
             </li>
         </ul>
 
-        <h3>How to apply trans tape for binding?</h3>
+        <h3 id="taping_for_binding">How to apply trans tape for binding</h3>
 
         <ul>
             <li>
@@ -197,7 +199,7 @@
             </li>
         </ul>
 
-        <h3>How to apply Trans tape Tips & Tricks</h3>
+        <h3 id="binding_taping_tips">How to apply Trans tape Tips & Tricks</h3>
         <h4>The preparations and tips</h4> 
 
         <ol>
@@ -293,7 +295,9 @@
                 folxhealth.com/transgender-packer-guide
             </a> 
         </p>
-        <h3>Where do I buy a packer?</h3> 
+        <h3 id="bying_packers">
+            Where do I buy a packer?
+        </h3> 
         <ul>
             <li>
                 <a href="https://transguysupply.com/collections/ftm-packers">
@@ -332,7 +336,7 @@
                 urbasics.ca/trans-guy-s-guide-to-stp-packers
             </a> 
         </p>
-        <h3>Where can I buy one?</h3> 
+        <h3 id="bying_stp">Where can I buy one?</h3> 
         <p>
             <ul>
                 <li>
@@ -360,7 +364,7 @@
             (click yes for popup, its sfw)
         </p>
 
-        <h2 id="trans_masc_surgeries">Masc surgery</h2> 
+        <h2 id="trans_masc_surgeries">Masc surgery and Grants</h2> 
         <p>
             Top surgery: keyhole (A cup chest, through nipple) <br>
             or double incision (for larger chests, scars under chest)<br>
