--- a/pages/bipoc_resources.html
+++ b/pages/bipoc_resources.html
@@ -1,8 +1,10 @@
 <div class="readable-div">
     <div class="readable-text">
-    <h1>BIPOC specific resources</h1>
+        <h1>BIPOC specific resources</h1>
 
-        <h2 id="bipoc_educational">Educational</h2>
+        <h2 id="bipoc_educational">
+            What is intersectionality?
+        </h2>
 
         <p>
             What is intersectionality? <br>
@@ -18,7 +20,7 @@
             (TW: stone wall, white privilege,etc)
         </p>
 
-        <h3 id="bipoc_us">US</h3>
+        <h2 id="bipoc_us">US</h2>
         <p>
             Organizations by state: 
             <a href="https://marshap.org">
@@ -26,7 +28,7 @@
             </a>
         </p>
 
-        <h4 id="bipoc_texas">Texas specific resources</h4>
+        <h3 id="bipoc_texas">Texas specific resources</h3>
 
         <ul>
             <li>
@@ -60,7 +62,7 @@
 
         <div class="separator"></div>
 
-        <h3 id="bipoc_asia_pacific">Asian & Pacific Islander Resources for LGBT</h3>
+        <h2 id="bipoc_asia_pacific">Asian & Pacific Islander</h2>
 
         <ul>
             <li>
@@ -75,7 +77,7 @@
             </li>
         </ul>
 
-        <h3 id="bipoc_canada">Canada</h3>
+        <h2 id="bipoc_canada">Canada</h2>
 
         <p>
             <li>
