--- a/pages/general_lgbt_organizations.html
+++ b/pages/general_lgbt_organizations.html
@@ -121,7 +121,7 @@
                 <li>
                     (swimwear,binders,underwear) Target
                     <a href="https://www.target.com/b/tomboyx/-/N-q643leppdgh">
-                        target.com//tomboyx/
+                        target.com/tomboyx/
                     </a> 
                 </li>
                 <li>
