--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,6 @@
 <style>
 .important-box {
-    width: 15em; 
+    width: 20em; 
     border: 1px solid; 
     background-color: #fde3ab; 
     color: #161616;
@@ -18,18 +18,18 @@
     text-align: center; 
     margin: 2em 0em;
 }
-@media (prefers-color-scheme: dark) { 
-    .important-box:hover {
-        background-color: #161616; 
-        color: #f8f8f8;
+    @media (prefers-color-scheme: dark) { 
+        .important-box:hover {
+            background-color: #161616; 
+            color: #f8f8f8;
+        }
     }
-}
-@media (prefers-color-scheme: light) { 
-    .important-box:hover {
-        background-color: #f8f8f8; 
-        color: #161616;
+    @media (prefers-color-scheme: light) { 
+        .important-box:hover {
+            background-color: #f8f8f8; 
+            color: #161616;
+        }
     }
-}
 </style>
 <div class="readable-div">
     <h1 class="readable-text">Worldwide LGBT Resources</h1>
@@ -730,11 +730,85 @@
                 <ol type="A">
                     <li>
                         <h4 style="margin: 0px;">
+                            <a href="./trans_masc_resources.html#general_trans_masc_resources">
+                                General
+                            </a>
+                        </h4>
+                    </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#ftm_myths">
+                                    Myths about Transitioning Female to Male
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#trans_masc_resource_guide">
+                                    Trans masc guide for resources
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#trans_masc_hair_care">
+                                    Hair care
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#trans_masc_clothes">
+                                    Clothes & Shoes guide
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
+                    <li>
+                        <h4 style="margin: 0px;">
                             <a href="./trans_masc_resources.html#binding">
                                 Binding
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#binder_size">
+                                    How to find the right size for your binder
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#getting_binders">
+                                    Where to get a binder
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#binding_savely">
+                                    How to bind safely
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#taping_for_binding">
+                                    How to apply trans tape for binding
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#binding_taping_tips">
+                                    How to apply Trans tape Tips & Trick
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_masc_resources.html#packing">
@@ -742,6 +816,15 @@
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#bying_packers">
+                                    Where do I buy a packer?
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_masc_resources.html#stp">
@@ -749,20 +832,31 @@
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#bying_stp">
+                                    Where can I buy one?
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./trans_masc_resources.html#general_trans_masc_resources">
-                                Clothing, Shoes, Hair, etc
+                            <a href="./trans_masc_resources.html#trans_masc_surgeries">
+                                Masc surgery and Grants
                             </a>
                         </h4>
                     </li>
-                    <li>
-                        <h4 style="margin: 0px;">
-                            <a href="./trans_masc_resources.html#grants_for_trans_mask_surgeries">
-                                Surgery & Grants for funding
-                            </a>
-                        </h4>
-                    </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_masc_resources.html#grants_for_trans_mask_surgeries">
+                                    Grants for surgery
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
@@ -775,21 +869,28 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./periods.html#period_tracking_apps">
-                                Tracking apps
+                                Period Tracking Apps
                             </a> 
                         </h4>
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./periods.html#trans_masc_periods">
-                                Info & support for afab folks
+                                Period Info & Support for AFAB folks...
                             </a> 
                         </h4>
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./periods.html#trans_gynecology">
-                                Why every trans person needs an OBGYN
+                                Why all Transgender folks can use an OBGYN
+                            </a> 
+                        </h4>
+                    </li>
+                    <li>
+                        <h4 style="margin: 0px;">
+                            <a href="./periods.html#trans_fem_periods">
+                                Trans women do get periods
                             </a> 
                         </h4>
                     </li>
@@ -805,14 +906,23 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./pregnancy_and_parenting.html#trans_and_queer_pregnancy_resources">
-                                Queer parenting links
+                                Trans & Queer Pregnancy Resources
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./pregnancy_and_parenting.html#queer_parenting_facebook_groups">
+                                    Facebook groups for LGBT pregnancy & parents around the world
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./pregnancy_and_parenting.html#trans_masc_pregnancy">
-                                Can trans men get pregnant/prevention
+                                Can trans men get pregnant & preventions
                             </a>
                         </h4>
                     </li>
@@ -823,6 +933,15 @@
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./pregnancy_and_parenting.html#trans_women_breast_milk">
+                                    Trans women breast milk
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./pregnancy_and_parenting.html#trans_parenting_media">
@@ -833,7 +952,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./pregnancy_and_parenting.html#raising_a_trans_kid">
-                                Parenting a trans kid
+                                Raising a transgender kid
                             </a>
                         </h4>
                     </li>
@@ -856,28 +975,72 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_fem_resources.html#trans_fem_hair">
-                                Hair (wigs, laser removal, etc)
+                                Hair
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_wigs">
+                                    Guide to wearing wigs for trans fem
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_wigs_recommendations">
+                                    Wig stores that were recommended by other trans women
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_guide">
+                                    Fem hair guide
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_salon">
+                                    Finding a safe trans hair salon
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_loss">
+                                    Prevent Hair loss
+                                </a> 
+                            </h5>
+                        </li>
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_hair_removal">
+                                    Hair removal
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_fem_resources.html#trans_fem_makeup">
-                                Makeup (beginner guide)
+                                Makeup
                             </a>
                         </h4>
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_fem_resources.html#trans_fem_body_shape">
-                                Body (clothes, workouts, tucking, etc)
+                                Body shape
                             </a>
                         </h4>
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./trans_fem_resources.html#trans_fem_bra">
-                                Chest (bra size guide)
+                                Bra / Chest
                             </a>
                         </h4>
                     </li>
@@ -888,6 +1051,15 @@
                             </a>
                         </h4>
                     </li>
+                    <ol type="I">
+                        <li>
+                            <h5 style="margin: 0px;">
+                                <a href="./trans_fem_resources.html#trans_fem_surgery_grants">
+                                    Grants for surgery
+                                </a> 
+                            </h5>
+                        </li>
+                    </ol>
                 </ol>
             </li>
             <li>
@@ -900,7 +1072,7 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./nonbinary_and_intersex_resources.html#nonbinary_and_intersex_general_resources">
-                                resource guide
+                                General Resources
                             </a>
                         </h4>
                     </li>
@@ -923,15 +1095,8 @@
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
-                            <a href="./bipoc_resources.html#bipoc_educational">
-                                Worldwide links
-                            </a>
-                        </h4>
-                    </li>
-                    <li>
-                        <h4 style="margin: 0px;">
                             <a href="./bipoc_resources.html#bipoc_us">
-                                US specific
+                                US
                             </a>
                         </h4>
                     </li>
@@ -939,7 +1104,7 @@
                         <li>
                             <h5 style="margin: 0px;">
                                 <a href="./bipoc_resources.html#bipoc_texas">
-                                    Texas BIPOC
+                                    Texas specific resources
                                 </a>
                             </h5>
                         </li>
@@ -954,14 +1119,14 @@
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./bipoc_resources.html#bipoc_canada">
-                                Canada specific
+                                Canada
                             </a>
                         </h4>
                     </li>
                     <li>
                         <h4 style="margin: 0px;">
                             <a href="./bipoc_resources.html#bipoc_mental_health">
-                                Mental Health for BIPOC
+                                BIPOC Mental Health
                             </a>
                         </h4>
                     </li>
