more icons and footer update

--- a/homelessness_and_financials.html
+++ b/homelessness_and_financials.html
@@ -906,9 +906,9 @@
 <div class="readable-div">
     <p style="text-align: center;">
         Want to add something here? <br>
-        Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
+        Contact Pongo under <code>worldwidelgbtresources@gmail.com</code> <br>
         Technical difficulties? <br>
-        Let @Add know on 
+        Contact Add on 
         <a href="https://discordapp.com/users/245579273052749825">
             Discord (add_gaming)
         </a> 
@@ -922,7 +922,7 @@
     <p class="readable-text">
         Disclaimer: <br>
         This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
-        Any products/companies are just suggestions, use discretion. 
+        Any products/companies are just suggestions. 
         Please use your own discretion and research with any advice listed. 
         Always seek the advice of your qualified health care provider regarding any medical questions.
     </p>
